plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.elice'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-oauth2-jose'

    // OAuth2.0
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // 이 부분이 필요합니다.

    // Security
    testImplementation 'org.springframework.security:spring-security-test'

    // Jasypt
    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'

    // BootPay
    implementation 'io.github.bootpay:backend:+'

    // Websocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Jackson
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // Mail
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // SMS
    implementation 'net.nurigo:javaSDK:2.2'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // H2
    runtimeOnly 'com.h2database:h2'

    // MySQL
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // HttpClient
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'

    // Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Servlet API
    implementation 'javax.servlet:javax.servlet-api:4.0.1'

    // OAuth2 JOSE
    implementation 'org.springframework.security:spring-security-oauth2-jose:5.5.1'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}